ingress/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-deployment
    namespace: parity
    annotations:

        nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
    selector:
        matchLabels:
            app: nginx
