ingress/ethercluster-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-ethercluster
    namespace: ethercluster
    annotations:
        kubernetes.io/ingress.global-static-ip-name: ethercluster-1
        kubernetes.io/ingress.allow-http: "false"
spec:
    tls:
      secretName: tls-classic
      hosts:
        - www.ethercluster.com
    rules:
    - host: www.ethercluster.com
      http:
        paths:
        - path: /
          backend:
            serviceName: web
            servicePort: 8080
        - path: /etc
          backend:
            serviceName: classic 
            servicePort: 8545
        - path: /kotti
          backend:
            serviceName: kotti
            servicePort: 8545
